# cheartpy

./: .gitignore  .gitmodules  LICENSE  Makefile  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
cheartpy-cl/: pyproject.toml
cheartpy-cl/src/cheartpy/cl/: _constraint_dilation.py  _constraint_dilation.pyi  _types.py  _variables.py  api.py  cl_expressions.py  constraint_dilation.py  constraint_dilation.pyi  constraint_motion.py  constraint_motion.pyi  mesh.py  noise.py  rotation.py  struct.py  types.py  variables.py
cheartpy-cl/src/cheartpy/cl/fe/: _api.py  _types.py
cheartpy-cl/src/cheartpy/cl/mesh/: __init__.py  __init__.pyi  _api.py  _centroid.py  _meshing.py  _types.py  _utils.py
cheartpy-cl/src/cheartpy/cl/var/: __init__.py  __init__.pyi  _interpolation.py
cheartpy-fe/: README.md  pyproject.toml
cheartpy-fe/src/cheartpy/cheart_parsing/pfile/: __init__.py  _api.py  _argparse.py  _cli.py  _types.py
cheartpy-fe/src/cheartpy/cheart_parsing/pfile/_regex/: __init__.py  _types.py
cheartpy-fe/src/cheartpy/cheart_parsing/pfile/find/: __init__.py
cheartpy-fe/src/cheartpy/cmd_tools/: _impls.py  _traits.py  _utils.py  funcs.py  impls.py  traits.py  varcomp.py
cheartpy-fe/src/cheartpy/cmd_tools/cli/: __init__.py  __init__.pyi  _cli.py  _parser.py  _types.py
cheartpy-fe/src/cheartpy/cmd_tools/varcomp/: __init__.py  __init__.pyi  __main__.py  _api.py  _cli.py  _parser.py  _stats.py  _traits.py  _var_getters.py
cheartpy-fe/src/cheartpy/examples/arterial_universal_coordinate/: __init__.py
cheartpy-fe/src/cheartpy/fe/: aliases.py  api.py  api.pyi  p_file.py  p_file.pyi
cheartpy-fe/src/cheartpy/fe/aliases/: __init__.py  _matrix.py  _problems.py  _solver.py  _topology.py  _variable.py
cheartpy-fe/src/cheartpy/fe/api/: __init__.py  __init__.pyi  _basis.py  _bc.py  _expression.py  _matrix.py  _pfile.py  _solver_group.py  _time.py  _topology.py  _utils.py  _variable.py
cheartpy-fe/src/cheartpy/fe/api/_physics/: rigid_body.py  solid.py
cheartpy-fe/src/cheartpy/fe/cmd/: __init__.py  __init__.pyi  _cmdline.py  cmdline.py
cheartpy-fe/src/cheartpy/fe/impl/: __init__.py  basis.py  data_pointers.py  expressions.py  p_file.py  problems.py  solver_groups.py  solver_matrix.py  time_schemes.py  tools.py  topologies.py  variables.py
cheartpy-fe/src/cheartpy/fe/impl/solver_matrix/: __init__.py  _mumps_matrix.py  _solver_matrix.py
cheartpy-fe/src/cheartpy/fe/physics/api/: __init__.py  l2projection.py  laplace.py  rigid_body.py
cheartpy-fe/src/cheartpy/fe/physics/fluids/: __init__.py  navier_stocks.py
cheartpy-fe/src/cheartpy/fe/physics/fs_coupling/: __init__.py  struct.py  (+2 more)
cheartpy-fe/src/cheartpy/fe/string_tools/: __init__.py  _pytools.py  _utils.py
cheartpy-fe/src/cheartpy/fe/trait/: __init__.py  _basic.py  _pfile.py  _protocols.py  _solver_group.py  _solver_matrix.py  basic.py  solver_group.py  solver_matrix.py
cheartpy-fe/src/cheartpy/fe/utils/: __init__.py  _utils.py
cheartpy-fe/src/cheartpy/time_stepping/: __init__.py  _linear_smoothing.py  _log_linear_stepping.py  _power_smoothing.py
cheartpy-io/: pyproject.toml
cheartpy-io/src/cheartpy/io/: __init__.py  __init__.pyi  _cheart.py  _data.py  _debug.py  _meshio.py  _raw.py  api.py
cheartpy-io/src/cheartpy/search/: __init__.py  __init__.pyi  _impl_indexers.py  _indexing.py  _search.py  _validation.py  api.py  trait.py
cheartpy-mesh/: pyproject.toml  ruff.toml
cheartpy-mesh/src/cheartpy/mesh/: __init__.py  __init__.pyi  __main__.py  _api.py  _lagrange_shape_funcs.py  _struct.py  _validation.py  api.py  interpolate_var.py  make_block.py  make_square.py  struct.py  validation.py
cheartpy-mesh/src/cheartpy/mesh/cylinder_core/: api.py  api.pyi  core.py  data.py
cheartpy-mesh/src/cheartpy/mesh/hex_core/: api.py  api.pyi  core.py
cheartpy-mesh/src/cheartpy/mesh/interpolate/: __init__.py  interpolation.py  maps.py  parsing.py  remeshing.py
cheartpy-mesh/src/cheartpy/mesh/quad_core/: core.py
cheartpy-mesh/src/cheartpy/mesh/surface_core/: __init__.py  meshing.py  normals.py  surface.py  surfacing.py
cheartpy-mesh/src/cheartpy/mesh_tools/: __main__.py  interpolate_var.py
cheartpy-mesh/src/cheartpy/mesh_tools/cylinder_core/: __init__.py  __init__.pyi  _api.py  _core.py  _parsing.py
cheartpy-mesh/src/cheartpy/mesh_tools/hex_core/: __init__.py  __init__.pyi  _api.py  _core.py  _parsing.py
cheartpy-mesh/src/cheartpy/mesh_tools/interpolation/: __init__.py  __init__.pyi  _api.py  _cylinder.py  _interpolation.py  _parsing.py  _remeshing.py
cheartpy-mesh/src/cheartpy/mesh_tools/quad_core/: __init__.py  __init__.pyi  _api.py  _core.py  _parsing.py
cheartpy-mesh/src/cheartpy/mesh_tools/surface_core/: __init__.py  __init__.pyi  cutplanes.py  meshing.py  normals.py  surfacing.py
cheartpy-mesh/src/cheartpy/mesh_tools/tools/: __init__.py  __init__.pyi  _merge.py  _search.py  _types.py
cheartpy-mesh/src/cheartpy/meshio/: _data.py  _javi.py  _types.py
cheartpy-symbolic/: pyproject.toml
cheartpy-symbolic/src/cheartpy/symbolic/: _func.py  _operators.py  expressions.py  functions.py  negatives.py  scaled.py  symbols.py  trait.py
cheartpy-symbolic/src/cheartpy/symbolic/_expression_algebra/: __init__.py  _addition.py
cheartpy-symbolic/src/cheartpy/symbolic/_symbols/: __init__.py  _addition.py  _subtraction.py
cheartpy-symbolic/src/cheartpy/symbolic/operators/: _addition.py  _addition_expression.py  _division.py  _modulo.py  _power.py  _subtraction.py  _subtraction_expression.py
cheartpy-symbolic/src/cheartpy/symbolic/operators.py/: _addition.py  _division.py  _multiplication.py  _subtraction.py
cheartpy-vtk/: pyproject.toml
cheartpy-vtk/src/cheartpy/elem_interfaces/: __init__.py  __init__.pyi  _abaqus.py  _types.py  _vtk.py  abaqus.py  vtk.py
cheartpy-vtk/src/cheartpy/map/: abaqus.py  types.py
cheartpy-vtk/src/cheartpy/vtk/: _lagrange_shape_funcs.py  api.py  api.pyi  struct.py  trait.py  types.py
cheartpy-vtk/src/cheartpy/vtk/_elements/: __init__.py  _lagrange_shape_funcs.py  _line.py  _types.py
cheartpy-vtk/src/cheartpy/xml/: __init__.py  _xml.py
cheartpy-xml/: pyproject.toml
(+414 files in other folders)
