[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cheartpy"
version = "0.2.0"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
description = "Python module for creating Cheart pfiles and executing them."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Linux",
  "Development Status :: 0 - Alpha",
]
dependencies = [
  "pytools@git+https://github.com/willwiz/pytools",
  "numpy",
  "meshio",
  "cheartpy[all]",
]

[project.optional-dependencies]
all = [
  "cheartpy-abaqus",
  "cheartpy-cl",
  "cheartpy-fe",
  "cheartpy-io",
  "cheartpy-mesh",
  "cheartpy-paraview",
  "cheartpy-vtk",
]
mesh = ["cheartpy-mesh"]
vtu = ["cheartpy-mesh", "cheartpy-paraview"]
abaqus = ["cheartpy-abaqus"]
fe = ["cheartpy-mesh", "cheartpy-paraview", "cheartpy-fe"]


[project.scripts]
cheart2vtu = "cheartpy.paraview.__main__:cheart2vtu_cli"

[tool.uv.sources]
cheartpy = { workspace = true }
cheartpy-abaqus = { workspace = true }
cheartpy-cl = { workspace = true }
cheartpy-fe = { workspace = true }
cheartpy-io = { workspace = true }
cheartpy-mesh = { workspace = true }
cheartpy-paraview = { workspace = true }
cheartpy-vtk = { workspace = true }

[tool.uv.workspace]
members = [
  ".",
  "./cheartpy-abaqus",
  "./cheartpy-cl",
  "./cheartpy-fe",
  "./cheartpy-io",
  "./cheartpy-mesh",
  "./cheartpy-paraview",
  "./cheartpy-vtk",
]
[tool.uv.build-backend]
namespace = true
