[build-system]
requires = ["uv_build>=0.10.9,<0.11"]
build-backend = "uv_build"

[project]
name = "cheartpy"
version = "1.2.0a"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
description = "Python module for creating Cheart pfiles and executing them."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Linux",
  "Development Status :: 0 - Alpha",
]
license = "MIT"
dependencies = ["pytools>=1.2.0a", "numpy", "meshio", "cheartpy-io"]

[project.optional-dependencies]
all = [
  "cheartpy-abaqus",
  "cheartpy-cl",
  "cheartpy-fe",
  "cheartpy-io",
  "cheartpy-mesh",
  "cheartpy-paraview",
  "cheartpy-vtk",
]
mesh = ["cheartpy-mesh"]
vtu = ["cheartpy-mesh", "cheartpy-paraview"]
abaqus = ["cheartpy-abaqus"]
fe = ["cheartpy-mesh", "cheartpy-paraview", "cheartpy-fe"]


[tool.uv.sources]
cheartpy = { path = ".", package = false }
cheartpy-abaqus = { path = "cheartpy-abaqus", editable = true }
cheartpy-cl = { path = "cheartpy-cl", editable = true }
cheartpy-fe = { path = "cheartpy-fe", editable = true }
cheartpy-io = { path = "cheartpy-io", editable = true }
cheartpy-mesh = { path = "cheartpy-mesh", editable = true }
cheartpy-paraview = { path = "cheartpy-paraview", editable = true }
cheartpy-vtk = { path = "cheartpy-vtk", editable = true }
cheartpy-symbolic = { path = "cheartpy-symbolic", editable = true }
pytools = { git = "https://github.com/willwiz/pytools"}

[tool.uv.build-backend]
module-name = []
namespace = true

[dependency-groups]
dev = [
  "cheartpy-abaqus",
  "cheartpy-cl",
  "cheartpy-fe",
  "cheartpy-io",
  "cheartpy-mesh",
  "cheartpy-paraview",
  "cheartpy-symbolic",
  "cheartpy-vtk",
  "pytest",
]
