[build-system]
requires = ["uv_build>=0.10.9,<0.11"]
build-backend = "uv_build"

[project]
name = "cheartpy-fe"
version = "0.0.1"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
description = "Python module for creating Cheart pfiles and executing them."
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Linux",
  "Development Status :: 0 - Alpha",
]
license = "MIT"
dependencies = ["pytools>=1.2.0a", "numpy", "cheartpy-io", "cheartpy-vtk", "pydantic", "scipy-stubs[scipy]"]

[tool.uv.build-backend]
module-name = ["cheartpy.fe", "cheartpy.cmd_tools", "cheartpy.time_stepping", "cheartpy.cheart_parsing"]
namespace = true

[project.scripts]
chsolve = "cheartpy.cmd_tools.cli:solver_cli"
chprep = "cheartpy.cmd_tools.cli:prep_cli"
varcomp = "cheartpy.cmd_tools.varcomp:varcomp_cli"
parse_pfile = "cheartpy.cheart_parsing.pfile:parse_pfile_cli"
