[build-system]
requires = ["uv_build>=0.10.9,<0.11"]
build-backend = "uv_build"

[project]
name = "cheartpy-symbolic"
version = "0.0.1"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
description = "Python module for creating Cheart pfiles and executing them."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Linux",
  "Development Status :: 0 - Alpha",
]
dependencies = ["pytools"]

[tool.uv.build-backend]
module-name = "cheartpy.symbolic"
namespace = true
