[build-system]
requires = ["uv_build>=0.10.9,<0.11"]
build-backend = "uv_build"

[project]
name = "cheartpy-vtk"
version = "0.0.1"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
description = "Python module for creating Cheart pfiles and executing them."
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Linux",
  "Development Status :: 0 - Alpha",
]
dependencies = ["pytools", "numpy"]

[tool.uv.build-backend]
module-name = "cheartpy.vtk"
namespace = true
